--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,39 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group = 'ru.coluchy'
 version = '1.0-SNAPSHOT'
+
+allure {
+    report {
+        version.set("2.25.0")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.25.0")
+            }
+        }
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter:5.10.1',
+            'com.codeborne:selenide:6.16.0',
+            'io.qameta.allure:allure-selenide:2.25.0'
+    )
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
 }
 
 test {
